fix: configurar CORS para eliminar error 'Failed to fetch' en Swagger UI